--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ pandas
 plotly
 fredapi
 newsapi-python
-google-generativeai>=0.5.0
 numpy
 scikit-learn
 scipy
 lxml
 pytz
 cot_reports
+google-generativeai
